[package]
name = "ynext-xcloud"
version = "0.1.0"
edition = "2021"
authors = ["Ynext - Tecnologia e Automação <contato@ynext.com.br>"]
description = "Cliente nativo open source para Xbox Cloud Gaming — altíssimo desempenho, zero navegador"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynext-brazil/ynext-xcloud"
homepage = "https://github.com/ynext-brazil/ynext-xcloud"
readme = "README.md"
keywords = ["xcloud", "xbox", "gamestreaming", "gaming", "rust"]
categories = ["multimedia", "games"]
rust-version = "1.75"

# ===========================================================================
# Perfis de build otimizados
# ===========================================================================
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# ===========================================================================
# Feature flags
# ===========================================================================
[features]
default = []

# Ativa o pipeline de streaming GStreamer completo (requer libs GStreamer no sistema)
# Linux:   sudo apt install libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libgstreamer-plugins-bad1.0-dev
# Windows: Instale o GStreamer runtime e SDK em https://gstreamer.freedesktop.org/
streaming = [
    "dep:gstreamer",
    "dep:gstreamer-webrtc",
    "dep:gstreamer-sdp",
    "dep:gstreamer-video",
    "dep:gstreamer-audio",
]

# Ativa o sink OpenGL Zero-Copy (requer streaming + libgstreamer-gl)
gl-sink = ["streaming", "dep:gstreamer-gl"]

# ===========================================================================
# Dependências — Core (sem dependência de sistema além de TLS)
# ===========================================================================
[dependencies]
tokio = { version = "1.38", features = ["full"] }

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "charset",
    "http2",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
clap = { version = "4.5", features = ["derive", "color", "unicode"] }
toml = "0.8"
uuid = { version = "1.9", features = ["v4", "serde"] }

# Fase 4 — Módulo de Input
gilrs = "0.10"
bytes = "1.6"

# ===========================================================================
# Dependências — Feature "streaming" (GStreamer, opcional)
# ===========================================================================

# Core do GStreamer — wrapper Rust seguro sobre as libs C do GStreamer
gstreamer = { version = "0.23", features = ["v1_22"], optional = true }

# Elemento webrtcbin — núcleo WebRTC (SDP/ICE + DTLS + SRTP)
# É PROIBIDO usar webrtc-rs isolado; toda negociação ocorre aqui dentro
gstreamer-webrtc = { version = "0.23", optional = true }

# Parsing e manipulação de SDP
gstreamer-sdp = { version = "0.23", optional = true }

# Tipos de vídeo (caps, formatos, dimensões)
gstreamer-video = { version = "0.23", optional = true }

# Sink OpenGL Zero-Copy via EGL DMA-BUF (feature gl-sink)
gstreamer-gl = { version = "0.23", optional = true }

# Tipos e elemetos de áudio (Fase 5 — Opus pipeline)
gstreamer-audio = { version = "0.23", optional = true }

[dev-dependencies]
mockito = "1.4"
tokio-test = "0.4"
tempfile = "3.10"

[[bin]]
name = "ynext-xcloud"
path = "src/main.rs"
